--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 spring.liquibase.change-log=db/db.changelogs-root-shopperfume.xml
 server.error.whitelabel.enabled=false
 
