--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8991
 server.servlet.context-path=/
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/perfume
+spring.datasource.url=jdbc:mysql://localhost:3306/perfume
 spring.datasource.username=root
 spring.datasource.password=123456
 
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.hibernate.ddl-auto=none
 
 
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 spring.liquibase.change-log=db/db.changelogs-root-shopperfume.xml
 
 server.error.whitelabel.enabled=false
@@ -35,6 +35,6 @@ spring.data.web.pageable.default-page-size=12
 recaptcha.url=https://www.google.com/recaptcha/api/siteverify?secret=%s&response=%s
 recaptcha.secret=6Lc5cLkZAAAAANUjd4--Jx6PioSC_N-9MFKT3PsA
 
-hostname=localhost:8080
+hostname=localhost:8991
 
 logging.level.com.gmail.merikbest2015.ecommerce.controller=debug
