--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,15 +2,15 @@ spring.datasource.url=jdbc:mysql://localhost/perfume
 spring.datasource.username=root
 spring.datasource.password=123456
 
-spring.jpa.generate-ddl=false
+#spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=none
 
-spring.liquibase.enabled=false
-spring.liquibase.change-log=db/db.changelogs-root-shopperfume.xml
+#spring.liquibase.enabled=false
+#spring.liquibase.change-log=db/db.changelogs-root-shopperfume.xml
 server.error.whitelabel.enabled=false
 
-upload.path=src/main/resources/uploads
+upload.path=src/main/resources/uploads/
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=webstore.perfume@gmail.com
