--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/perfume
 spring.datasource.username=root
 spring.datasource.password=123456
 
-spring.jpa.generate-ddl=false
+#spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.properties.hibernate.format_sql=false
+#spring.jpa.hibernate.ddl-auto=none
 
 
 spring.liquibase.enabled=false
@@ -19,7 +19,7 @@ spring.liquibase.change-log=db/db.changelogs-root-shopperfume.xml
 server.error.whitelabel.enabled=false
 
 #upload.path=/home/ec2-user/uploads/
-upload.path=src/main/resources/uploads
+upload.path=src/main/resources/uploads/
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=webstore.perfume@gmail.com
